# convertfs

./: README.md  flake.nix  pyproject.toml
.zed/: tasks.json
convertfs/: __init__.py  __main__.py  converter.py  fuse.py  inodes.py  main.py  resolver.py
convertfs/converters/: __init__.py  archives.py  audio.py  data.py  dummy.py  ffmpeg.py  fonts.py  images.py  markdown_html.py  markitdown.py  subtitles.py  tabular.py  video_compressor_h264.py
systemd-service/: convertfs.service  install-service.sh
tests/converters/: conftest.py  test_archives.py  test_audio.py  test_data.py  test_dummy.py  test_ffmpeg.py  test_fonts.py  test_images.py  test_markdown_html.py  test_subtitles.py  test_tabular.py  test_video_compressor_h264.py
tests/converters/markitdown/: test_docx.py  test_pdf.py  test_pptx.py  test_xlsx.py
