[project]
name = "convertfs"
version = "0.1.0"
description = "File format conversion as a FUSE filesystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=17.0.1",
    "pyfuse3>=3.4.2",
    "pyvips>=3.1.1",
    "trio>=0.33.0",
    "typing-extensions>=4.15.0",
]

[project.scripts]
convertfs = "convertfs.__main__:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "convertfs"
module-root = ""
